syntax = "proto3";

option go_package = "./routeguide";

package routeguide;

service AuctionService {
    rpc AskForLeader(AskRequest) returns (LeaderPort) {}
    rpc Bid(BidRequest) returns (BidResponse) {}
    rpc Result(ResultRequest) returns (AuctionData) {}
}

message AskRequest {
    int32 status = 1;
}

message LeaderPort {
    int32 leaderPort = 1;
}

message BidRequest {
    string sender = 1;
    int32 amount = 2;
}

message BidResponse {
    int32 status = 1;
    int32 currentHighestBid = 2;
}

message ResultRequest {
    int32 status = 1;
}

service TokenService {
    rpc FindLeaderRequest(LeaderRequest) returns (Empty) {}
    rpc SendHeartbeat(Empty) returns (HeartbeatResponse) {}
    rpc ShareData(AuctionData) returns (Empty) {}
}

message Empty {}

message AuctionData {
    int32 highestBid = 1;
    string highestBidder = 2;
    bool isAuctionRunning = 3;
}

message LeadershipRequest {
    int32 currentLeader = 1;
}

message LeaderRequest {
    int32 currentLeader = 1;
    int32 lowestPort = 2;
}

message HeartbeatResponse {
    int32 status = 1;
}